-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 10.0.2
-
None
-
-
2ff5293c4 (master), e6b8791fa (master)
Steps to reproduce:
- Open examples/widgets/mainwindows/mdi.pyproject from the pyside-setup repo ( https://doc.qt.io/qtforpython-6/examples/example_widgets_mainwindows_mdi.html )
- Rename function load() at mdi.py:37 to testfunc
- Do a diff
- Note: Large parts of code are copied
Using Python 3.10.6
TextCursor::setPosition: Position '-4' out of range virtual void TextEditor::RefactoringChangesData::indentSelection(const QTextCursor&, const Utils::FilePath&, const TextEditor::TextDocument*) const not implemented virtual void TextEditor::RefactoringChangesData::indentSelection(const QTextCursor&, const Utils::FilePath&, const TextEditor::TextDocument*) const not implemented
| For Gerrit Dashboard: QTCREATORBUG-29389 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 495477,3 | Python: Workaround pylsp rename bug | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 497949,3 | LanguageClient: correctly cancel running rename request | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |