Python: Workaround pylsp rename bug

upstream bug report:
https://github.com/python-lsp/python-lsp-server/issues/413

Fixes: QTCREATORBUG-29389
Change-Id: I5b122b5e5c245cb5c43c32da1296b2132a07a9aa
Reviewed-by: Christian Stenger <christian.stenger@qt.io>